# glexperiments

./: .gitignore  CMakeLists.txt
CMakeBuild/: linux.sh  windows.sh
data/: f.demo.glsl  g.fs_quad.glsl
glsl/: f.demo.glsl
src/: main.cpp
src/glad/: glad.c
